--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -11,6 +11,9 @@
     />
     <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="{%static 'css/styles.css'%}" />
+    {%block link_block%}
+
+    {%endblock%}
     <title>Boy’s T-Shirt</title>
   </head>
 
@@ -120,8 +123,9 @@
     </footer>
     <!-- Custom Script -->
     <script src="{%static 'js/index.js'%}"></script>
-    {%block scripts%}
 
-    {%endblock%}
   </body>
+  {%block scripts%}
+
+  {%endblock%}
 </html>
