--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>checkout</title>
+    <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -23,7 +23,7 @@
             <ol class="inline-flex items-center space-x-1 md:space-x-3">
               <li class="inline-flex items-center">
                 <a
-                  href="#"
+                  href="{%url 'cart'%}"
                   class="ml-1 inline-flex text-sm font-medium text-gray-900 hover:underline md:ml-2"
                 >
                   <svg
@@ -140,13 +140,13 @@
               </div>
               <div class="flex flex-1">
                 <p class="text-sm font-medium">
-                  You have <strong>{{cart_count}}</strong> items in cart. Sub total is :
+                  You have <strong>{{cart_count}}</strong> items in cart. Sub total is
                   <strong>₹{{request.user.cart.cart_total}}</strong>
                 </p>
               </div>
               <a
                 href="{%url 'cart' %}"
-                class="rounded-md bg-blue-700 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
+                class="rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
               >
                 View Items
               </a>
@@ -160,12 +160,12 @@
                     class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
                     for="firstName"
                   >
-                    Email
+                    email
                   </label>
                   <input
                     class="flex h-10 w-full rounded-md border border-black/30 bg-transparent px-3 py-2 text-sm placeholder:text-gray-600 focus:outline-none focus:ring-1 focus:ring-black/30 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
                     type="email"
-                    placeholder="Enter your Email Address"
+                    placeholder="Enter your first name"
                     id="firstName"
                     name="email"
                     required
@@ -175,7 +175,7 @@
                 <div class="w-full">
                   <label
                     class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-                    for="lastName"
+                    for="ph"
                   >
                     Phone
                   </label>
@@ -183,7 +183,6 @@
                     class="flex h-10 w-full rounded-md border border-black/30 bg-transparent px-3 py-2 text-sm placeholder:text-gray-600 focus:outline-none focus:ring-1 focus:ring-black/30 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
                     type="text"
                     placeholder="Enter your phone"
-                    id="lastName"
                     name="phone"
                     required
                   />
@@ -192,7 +191,7 @@
                   <div class="w-full">
                     <label
                       class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-                      for="email"
+                      for="addrs"
                     >
                    Address
                     </label>
@@ -200,16 +199,32 @@
                       class="flex h-10 w-full rounded-md border border-black/30 bg-transparent px-3 py-2 text-sm placeholder:text-gray-600 focus:outline-none focus:ring-1 focus:ring-black/30 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50"
                       type="text"
                       placeholder="Enter delivery address"
-                      id="email"
                       name="address"
                       required
                     />
+                  </div>
+                  </div>
+                  <div class="col-span-2 grid">
+                    <div class="w-full">
+                      <label
+                        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+                        for=""
+                      >
+                     Payment Method
+                      </label>
+  
+                      <select name="payment" id="" class="flex h-10 w-full rounded-md border border-black/30 bg-transparent px-3 py-2 text-sm placeholder:text-gray-600 focus:outline-none focus:ring-1 focus:ring-black/30 focus:ring-offset-1 disabled:cursor-not-allowed disabled:opacity-50">
+                        <option value="cod">cod</option>
+                        <option value="online">online</option>
+                      </select>
+                     
+                    </div>
                   </div>
                 </div>
                 <div class="col-span-2 grid">
                   <button
                     type="submit"
-                    class="w-full rounded-md bg-blue-700 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
+                    class="mt-4 w-full rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
                   >
                     Next Step
                   </button>
